<menu xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:flags="http://schemas.android.com/apk/res-auto">

	<item
        android:id="@+id/mi_open_wiki"
        flags:showAsAction="ifRoom"
        android:icon="@drawable/ic_menu_wiki"        
        android:title="@string/mi_open_wiki"/>
    <item
        android:id="@+id/mi_show_answer"
        flags:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/mi_show_answer"/>
	<item
        android:id="@+id/mi_new_game"
        flags:showAsAction="never"
        android:title="@string/mi_new_game"/>
   	<item
        android:id="@+id/mi_settings"
        flags:showAsAction="never"
        android:title="@string/mi_settings"
        android:icon="@android:drawable/ic_menu_preferences"/>
</menu>
