<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <ListPreference 
        android:key="pref_language"
        android:title="@string/pref_language"
        android:dialogTitle="@string/pref_language"
        android:entries="@array/pref_languages_entries"
        android:entryValues="@array/pref_languages_values"
        android:defaultValue="@string/lang_default"/>

    <ListPreference         
        android:key="pref_game_mode" 
        android:title="@string/pref_game_mode_text"
        android:dialogTitle="@string/pref_game_mode_text"
        android:entries="@array/pref_game_mode_entries"
        android:entryValues="@array/pref_game_mode_values"
        android:defaultValue="3"
        />
    
    <mikhail.kalashnikov.flags.NumberPickerPreference 
        android:key="pref_number_of_flags" 
        android:title="@string/pref_number_of_flags"
        android:defaultValue="10"/>
</PreferenceScreen>
