<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" 
    android:orientation="vertical"
    android:background="#D1D0CE">
    
    <TextView
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textStyle="bold"
        android:text="@string/score" 
        android:layout_marginBottom="@dimen/view_margin"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="70" 
	    android:orientation="vertical"
	    android:background="#D1D0CE">
	    <!--android:padding="2dp"-->
	    
	    
	    <ProgressBar
	        android:id="@+id/progressBar1"
	        android:layout_gravity="center"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	            
        <ImageView
	        android:id="@+id/flag"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:adjustViewBounds="true"
	        android:contentDescription="@string/flag"
	        android:scaleType="fitCenter"
	        android:visibility="gone"/>
    </LinearLayout>
    

        
    <EditText
        android:id="@+id/country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:hint="@string/country" 
        android:layout_marginBottom="@dimen/view_margin"
        android:visibility="gone">

        <requestFocus />
    </EditText>

	<AutoCompleteTextView
        android:id="@+id/country_auto_complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:hint="@string/country" 
        android:layout_marginBottom="@dimen/view_margin"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/capital"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:hint="@string/capital"
        android:layout_marginBottom="@dimen/view_margin"
        android:visibility="gone"/>

    <AutoCompleteTextView
        android:id="@+id/capital_auto_complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:hint="@string/capital"
        android:layout_marginBottom="@dimen/view_margin"
        android:visibility="gone"/>
    
    
	<RadioGroup 
	    android:id="@+id/radio_group_answers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/view_margin"
        android:visibility="gone">
        
	    <RadioButton 
	        android:id="@+id/rb_answer1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textSize="17sp"/>
	    
	    <RadioButton 
	        android:id="@+id/rb_answer2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textSize="17sp"/>
	    
	    <RadioButton 
	        android:id="@+id/rb_answer3"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textSize="17sp"/>
	    
	    <RadioButton 
	        android:id="@+id/rb_answer4"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textSize="17sp"/>
	</RadioGroup>
	
    <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="17" 
	    android:orientation="horizontal"
	    android:background="#D1D0CE">
        
        <Button
	        android:id="@+id/submit"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="50"
	        android:text="@string/submit" 
	        android:layout_gravity="bottom"
	        android:layout_marginRight="@dimen/view_margin"
	        android:background="@drawable/check"
	        style="@style/TextStyle"/>
	
	    <Button
	        android:id="@+id/next"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="50"
	        android:text="@string/next" 
	        android:layout_gravity="bottom"
	        android:background="@drawable/next"
	        style="@style/TextStyle"/>
    </LinearLayout>
    


</LinearLayout>
